BT: Thực hành Link + Image update

--- a/bai3 - update/10.html
+++ b/bai3 - update/10.html
@@ -13,7 +13,8 @@
 	</style>
 </head>
 <body>
-	<img src="img/2.jpg" >
-	<p>Sieu xe ô tô số 9 có mới có năm 2018</p>
+	<div class="xe">
+		<a href="home.html#xe10"><img alt="Phat" src="img/1.jpg" /><br /><span>Siêu xe ô tô số 10 có mới có năm 2018</span></a>
+	</div>
 </body>
 </html>
