--- a/bai3 - update/1.html
+++ b/bai3 - update/1.html
@@ -13,7 +13,9 @@
 	</style>
 </head>
 <body>
-	<img src="img/6.jpg" >
-	<p>Sieu xe ô tô số 10 có mới có năm 2018</p>
+	<div class="xe">
+		<a href="home.html#xe1"><img alt="Phat" src="img/1.jpg" /><br /><span>Siêu xe ô tô số 3 có mới có năm 2018</span></a>
+	</div>
+	
 </body>
 </html>
