--- a/bai3 - update/5.html
+++ b/bai3 - update/5.html
@@ -13,7 +13,8 @@
 	</style>
 </head>
 <body>
-	<img src="img/7.jpg" >
-	<p>Sieu xe ô tô số 4 có mới có năm 2018</p>
+	<div class="xe">
+		<a href="home.html#xe5"><img alt="Phat" src="img/5.jpg" /><br /><span>Siêu xe ô tô số 5 có mới có năm 2018</span></a>
+	</div>
 </body>
 </html>
