--- a/bai3 - update/home.html
+++ b/bai3 - update/home.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+	
+</div><!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -10,34 +11,34 @@
 		<h1>Các sản phẩm ô tô mới 2018</h1>
 </div>
 <div id="car">
-	<div class="xe">
+	<div id="xe1" class="xe">
 		<a href="1.html"><img alt="Phat" src="img/1.jpg" /><br /><span>Xe oto 1</span></a>
 	</div>
-	<div class="xe">
+	<div id="xe2" class="xe">
 		<a href="2.html"><img alt="Phat" src="img/2.jpg" /><br /><span>Xe oto 2</span></a>
 	</div>
-	<div class="xe">
+	<div  id="xe3" class="xe">
 		<a href="3.html"><img alt="Phat" src="img/3.jpg" /><br /><span>Xe oto 3</span></a>
 	</div>
-	<div class="xe">
+	<div  id="xe4" class="xe">
 		<a href="4.html"><img alt="Phat" src="img/7.jpg" /><br /><span>Xe oto 4</span></a>
 	</div>
-	<div class="xe">
+	<div id="xe5" class="xe">
 		<a href="5.html"><img alt="Phat" src="img/5.jpg" /><br /><span>Xe oto 5</span></a>
 	</div>
-	<div class="xe">
+	<div id="xe6" class="xe">
 		<a href="6.html"><img alt="Phat" src="img/6.jpg" /><br /><span>Xe oto 6</span></a>
 	</div>
-	<div class="xe">
+	<div id="xe7" class="xe">
 		<a href="7.html"><img alt="Phat" src="img/1.jpg" /><br /><span>Xe oto 7</span></a>
 	</div>
-	<div class="xe">
+	<div id="xe8" class="xe">
 		<a href="8.html"><img alt="Phat" src="img/5.jpg" /><br /><span>Xe oto 8</span></a>
 	</div>
-	<div class="xe">
+	<div id="xe9" class="xe">
 		<a href="9.html"><img alt="Phat" src="img/2.jpg" /><br /><span>Xe oto 9</span></a>
 	</div>
-	<div class="xe">
+	<div id="xe10" class="xe">
 		<a href="10.html"><img alt="Phat" src="img/6.jpg" /><br /><span>Xe oto 10</span></a>
 	</div>
 </div>
