--- a/menu da cap/3.html
+++ b/menu da cap/3.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Home.html</title>
 	<link rel="stylesheet" type="text/css" href="css/bai3.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
