--- a/menu da cap/home.html
+++ b/menu da cap/home.html
@@ -77,6 +77,7 @@
 				<img src="img/34.jpg" alt="some alt text"/> <p>Thịt Rán Rau</p>
 			</a>
 		</div>
+		<div class="clear">
 		</div>
 		<div>
 		<h2><i class="fas fa-address-book"></i> Menu Ngày Mai</h2>
