--- a/menu da cap/3.html
+++ b/menu da cap/3.html
@@ -1,4 +1,6 @@
-	
+	a: <input type="text" id="a" value="" onkeyup="tinh()"/>
+	    b: <input type="text" id="b" value="" onkeyup="tinh()"/>
+	    Kết quả: <input type="text" id="result" value=""/>	
 </div><!DOCTYPE html>
 <html lang="en">
 <head>
