--- a/baitap Ahao/2.html
+++ b/baitap Ahao/2.html
@@ -20,10 +20,10 @@
 		</div>	
 
 		<div class="hang2">
-			<img src="5.png" alt="">
-			<img src="6.png" alt="">
-			<img src="7.png" alt="">
-			<img src="8.png" alt="">
+			<img src="4.jpg" alt="">
+			<img src="5.jpg" alt="">
+			<img src="6.jpg" alt="">
+			<img src="7.jpg" alt="">
 			<div class="clear"></div>
 		</div>
 	</div>
@@ -33,23 +33,23 @@
 			<div class="tieude">
 				News/Tips
 			</div>
-			<img src="9.png" alt="">
-			<img src="10.png" alt="">
-			<img src="11.png" alt="">
+			<img src="8.jpg" alt="">
+			<img src="9.jpg" alt="">
+			<img src="10.jpg" alt="">
 		</div>
 		<div class="cotduoi1">
 			<div class="tieude">
 				News/Tips
 			</div>
-			<img src="9.png" alt="">
-			<img src="10.png" alt="">
-			<img src="11.png" alt="">
+			<img src="9.jpg" alt="">
+			<img src="10.jpg" alt="">
+			<img src="8.jpg" alt="">
 		</div>
 		<div class="cotduoi1">
 			<div class="tieude">News/Tips</div>
-			<img src="9.png" alt="">
-			<img src="10.png" alt="">
-			<img src="11.png" alt="">
+			<img src="9.jpg" alt="">
+			<img src="10.jpg" alt="">
+			<img src="8.jpg" alt="">
 		</div>
 	<div class="clear"></div>
 	</div>
